# icn

./: .dockerignore  .gitignore  CONSOLIDATED_ARCHITECTURE.md  CONSOLIDATED_DEVELOPER_GUIDE.md  CONSOLIDATED_SYSTEM_INTEGRATION.md  Cargo.toml  DAG_STRUCTURE.md  Dockerfile  Dockerfile.bak  Dockerfile.wallet-api  ECONOMICS.md  GOVERNANCE_SYSTEM.md  INTEGRATION_GUIDE.md  Makefile  README-WEBSOCKET.md  README.md  RELEASE_NOTES.md  SECURITY.md  TRUST_MODEL.md  check-icn-core-vm.sh  docker-compose.integration.yml  fix_monorepo.sh  mandate_pause_voting_20250502_151208.json  package-lock.json  package.json  refactoring-report.md  repomix-output.xml  run_icn_devnet.sh  setup_agoranet_db.sh  start_icn_devnet.sh  update_refs.sh  wasmtime-upgrade-summary.md
agoranet/: Cargo.toml  README.md  schema.sql  sqlx-data.json
agoranet/.sqlx/: query-239a37d1faadf8e027eb62dc7cb3936eb58a7abea9203d7e6466b6e9e85fa512.json  query-374e4ea520f771436ad7fe7b6aae2ccaf3f53fedfd749cf99355c32f21cfe5e8.json  query-3df13767aeff79e1d0d1032c478eb5909381688bac1c1ad1f543402a97f0b64a.json  query-4a26e7cd99afc3bf50b82d45c0dfed4fb7caf19aabbd83e8a21feda8a81be2e7.json  query-5762645407e4ee9f20fd9f3e94a13dc0ca9a3c368668b3ea434f9d90bc25f038.json  query-5cf49adf35248386fcabb73ce0ee0d59ba7decf11818119ade91808b5287e7d1.json  query-6b5e9dc33a446dda4a9c946accbbb75fba31d8b1ef30238cbfc056f7a92737d1.json  query-6da5caffcfd32d135f3dce5e2667a282b6f563e35172f3adf916b1cd04572a23.json  query-75f1335743ded7e42dfd3f14b2ccc313907d51e4822e00ac6012facdbfb5e5bf.json  query-800bf2de1336b146bfeb7a8a11a7cd97f0c238edb8a65a9a86ee1f22b86872fa.json  query-9db0d4d7f53e0d4f4eb5dd29fa1e969faa140b1b4ecf47f988c83b46bf9353ff.json  query-a9542a2de9cf8d0d25e2972248932a83c6a4265202591f6cd0f506861d098ad5.json  query-bc5debb29b6139bc85c5dadaced4448d9437054ef5c8010346254e8445f7e7a9.json  query-c293e4720b7fd2d254a512135319916fd612a053e263f4be232c805eddec1d20.json  query-d0e42b162da56213a1495debddc7ffc353c21d9ed2870f2b8a7984f8a66f74d4.json  query-da539f9bd1aa6e244a64cc60babc7e47e274d8a26910b9c5ea1781e980b2a62c.json
agoranet/crates/agoranet-api/: Cargo.toml
agoranet/migrations/: 20240101000000_init.sql  20240101000000_initial_schema.sql  20240101000001_add_thread_creator.sql  20240101000001_thread_creator.sql  20240701000000_dag_redesign.sql  20240701000000_redesign.sql  20240702000000_incremental_data_migration.sql  20240702000000_incremental_update.sql
agoranet/src/: auth.rs  health.rs  lib.rs  main.rs  state.rs
agoranet/src/api/: mod.rs
agoranet/src/dag/: mod.rs  service.rs  types.rs
agoranet/src/federation/: discovery.rs  mod.rs
agoranet/src/models/: mod.rs  thread.rs
agoranet/src/routes/: dag.rs  messages.rs  mod.rs  threads.rs
agoranet/src/storage/: credentials.rs  reactions.rs  threads.rs
cli/: Cargo.toml  covm.rs
cli/src/: main.rs
cli/tests/: test_authorization_derivation.rs
crates/actions/: Cargo.toml
crates/actions/src/: lib.rs
crates/agoranet-integration/: Cargo.toml
crates/agoranet-integration/src/: lib.rs
crates/api/: Cargo.toml
crates/api/src/: lib.rs
crates/core-vm/: Cargo.toml
crates/core-vm/src/: blob_storage.rs  dag_helpers.rs  economics_helpers.rs  host_abi.rs  identity_helpers.rs  lib.rs  logging_helpers.rs  (+2 more)
crates/dag/: Cargo.toml
crates/economics/: Cargo.toml
crates/execution-tools/: Cargo.toml
crates/federation/: Cargo.toml
crates/ffi/: Cargo.toml
crates/governance-kernel/: Cargo.toml
crates/identity/: Cargo.toml
crates/storage/: Cargo.toml
crates/wallet-agent/: Cargo.toml
crates/wallet-core/: Cargo.toml
crates/wallet-sync/: Cargo.toml
crates/wallet-ui-api/: Cargo.toml
icn-runtime-root/cli/: Cargo.toml
icn-verifier/: Cargo.toml
icn-verifier/src/: lib.rs  server.rs
icn-wallet-root/: .gitignore  Cargo.toml  refactoring-summary.md
icn-wallet-root/.keys/: did_icn_coop_z6Mkfe3ELAXaBHJLgFo1kqzPipFzru7eagV3ozrZDAoUY2qp.meta.json  did_icn_indv_z6Mkme6xPYwUw4SeWy3r5ATS8tTFuowYMbodKcMu2u3QP1Ja.json  did_icn_indv_z6MkppkShzoAwiJNJVk1ucZjiaTiKzHs74jEPkm9w7nAJ8pb.json
icn-wallet-root/docs/: ARCHITECTURE.md
mesh/meshctl/: Cargo.toml
new-wallet/: Cargo.toml
runtime/: Cargo.toml  appeal_pause_voting_20250502_150634.json  ccl-interpreter-implementation.md  docker-compose.integration.yml  monitor_integration.sh  run_integration_node.sh  run_integration_tests.sh  run_stress_tests.sh
runtime/cli/: Cargo.toml  covm.rs  lib.rs
runtime/config/: runtime-config-integration.toml
runtime/devnet/: Dockerfile  README.md  docker-compose.yml
runtime/docs/: DAG_SYSTEM.md  DEPLOYMENT.md  EVENTS_CREDENTIALS.md  FEDERATION_INTEGRATION.md
runtime/examples/: community_charter.ccl  cooperative_bylaws.ccl  test_community_charter.ccl
runtime/tests/: README.md  full_governance_cycle.rs  integration_tests.rs  run_ccl_execute_test.sh  state_consistency_tests.rs  stress_tests.rs  wait_for_services.sh
tools/icn-verifier/: Cargo.toml
wallet/: .dockerignore  Cargo.toml  README.md  REFACTORING_CHECKLIST.md  package.json
wallet-agent/: Cargo.toml
wallet-agent/src/: cli.rs  lib.rs
wallet-core/: Cargo.toml
wallet-core/src/: filter.rs  lib.rs
wallet-ffi/: Cargo.toml
wallet-ffi/src/: wallet.udl
wallet/.keys/: did_icn_coop_z6Mkfe3ELAXaBHJLgFo1kqzPipFzru7eagV3ozrZDAoUY2qp.json  did_icn_coop_z6MkrTsTemALydvgaL7YziEgw582ozsrK5BXhuq9HHyiB3GL.json  did_icn_coop_z6MkrTsTemALydvgaL7YziEgw582ozsrK5BXhuq9HHyiB3GL.meta.json  did_icn_indv_z6Mkme6xPYwUw4SeWy3r5ATS8tTFuowYMbodKcMu2u3QP1Ja.meta.json  did_icn_indv_z6MkvmA3oc7yYVV9REgBDYSiuyW8mvXJyzngT4mVZWvpGDbx.meta.json
wallet/docs/: cli-polish.md  error-handling-guide.md  final-polish-checklist.md  security-considerations.md
wallet/examples/: wallet_cli.rs
wallet/scripts/: generate_mobile_bindings.sh  package.json  upgrade-constitution.sh
wallet/src/: lib.rs
wallet/tests/: Dockerfile.agoranet  Dockerfile.runtime  agoranet_integration_test.rs  docker-compose.integration.yml  e2e_workflow_test.rs  integration_test.rs  mock_agoranet.js  network_sync_test.rs  package.json  run_integration_tests.sh  runtime_integration_test.rs  setup_test_env.sh
(+780 files in other folders)
