[workspace]
resolver = "2"
members = [
    "runtime",
    "wallet",
    "runtime/crates/*",
    "wallet/crates/*"
]

# Temporarily excluded components with issues
exclude = [
    "wallet/crates/wallet-sync",
    "agoranet",
    "runtime/crates/agoranet-integration"
]

[workspace.dependencies]
# Common dependencies
anyhow = "1.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1", features = ["full"] }
async-trait = "0.1"
thiserror = "1.0"
tracing = "0.1"
tracing-subscriber = "0.3"
futures = "0.3"
clap = { version = "4.4", features = ["derive"] }

# Network and storage
libp2p = "0.53"
multihash = { version = "0.16.3", features = ["sha2"] }
cid = { version = "0.10.1", features = ["serde"] }

# IPLD related dependencies
libipld = { version = "0.14", features = ["derive"] }
libipld-core = "0.13.1"
serde_ipld_dagcbor = "0.4"
ipld-core = "0.3"

# Identity and security
ssi = { version = "0.7", features = ["ed25519", "rsa"] }

# Runtime-specific dependencies
wasmer = "3.1"
wasmer-wasi = "3.1"
did-method-key = "0.2"
hashbrown = "0.14"
merkle-cbt = "0.3"
backoff = "0.4.0"

# Additional commonly used dependencies
base64 = { version = "0.21", features = ["std"] }
chrono = { version = "0.4", features = ["serde"] }
uuid = { version = "1.3", features = ["v4", "serde"] }
rand = "0.8"
sha2 = "0.10"
hex = "0.4"
reqwest = { version = "0.11", features = ["json"] }
ed25519-dalek = "1.0"
