[package]
name = "agoranet"
version = "0.1.0"
edition = "2021"

[dependencies]
axum = "0.7.9"
tokio = { version = "1", features = ["full"] }
sqlx = { version = "0.7", features = ["runtime-tokio", "postgres", "chrono", "uuid", "json", "runtime-tokio-native-tls", "migrate"] }
tower = "0.4"
tower-http = { version = "0.4", features = ["cors", "trace"] }
dotenv = "0.15"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
chrono = { version = "0.4", features = ["serde"] }
uuid = { version = "1", features = ["v4", "serde"] }
thiserror = "1.0"
base64 = "0.21"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
async-trait = "0.1"
futures = "0.3"
validator = { version = "0.16", features = ["derive"] }
anyhow = "1.0"
sha2 = "0.10"
hmac = "0.12"
libp2p = { version = "0.55.0", features = ["gossipsub", "tcp", "yamux", "noise"] }
axum-extra = "0.10.1"
tokio-stream = "0.1.17"

[dev-dependencies]
tokio-test = "0.4"
reqwest = { version = "0.11", features = ["json"] } 
