[package]
name = "agoranet"
version = "0.1.0"
edition = "2021"

[dependencies]
axum = { workspace = true, features = ["macros"] }
tokio = { workspace = true, features = ["full"] }
sqlx = { workspace = true, features = ["runtime-tokio", "postgres", "chrono", "uuid", "json", "runtime-tokio-native-tls", "migrate"] }
tower = { workspace = true }
tower-http = { workspace = true, features = ["cors", "trace"] }
dotenv = "0.15"
serde = { workspace = true }
serde_json = { workspace = true }
chrono = { workspace = true }
uuid = { workspace = true, features = ["v4", "serde"] }
thiserror = "1.0"
base64 = "0.21"
tracing = { workspace = true }
tracing-subscriber = { workspace = true, features = ["env-filter"] }
async-trait = { workspace = true }
futures = { workspace = true }
validator = { version = "0.16", features = ["derive"] }
anyhow = { workspace = true }
sha2 = { workspace = true }
hmac = "0.12"
libp2p = { workspace = true, features = ["gossipsub", "tcp", "yamux", "noise", "tokio"] }
axum-extra = "0.10.1"
tokio-stream = { workspace = true }

[dev-dependencies]
tokio-test = "0.4"
reqwest = { version = "0.11", features = ["json"] } 
