[package]
name = "icn-wallet-cli"
version = "0.1.0"
edition = "2021"

[dependencies]
wallet-core = { path = "../crates/wallet-core" }
wallet-agent = { path = "../crates/wallet-agent" }
wallet-sync = { path = "../crates/wallet-sync" }
wallet-ui-api = { path = "../crates/wallet-ui-api" }
tokio = { version = "1.0", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
clap = { version = "4.4", features = ["derive"] }
uuid = { version = "1.0", features = ["v4", "serde"] }
anyhow = "1.0"
tracing = "0.1"
tracing-subscriber = "0.3"
