[package]
name = "icn-wallet-cli"
version = "0.1.0"
edition = "2021"

[dependencies]
wallet-core = { path = "../crates/wallet-core" }
wallet-agent = { path = "../crates/wallet-agent" }
wallet-sync = { path = "../crates/wallet-sync" }
wallet-ui-api = { path = "../crates/wallet-ui-api" }
tokio = { version = "1.34", features = ["full"] }
clap = { version = "4.4", features = ["derive"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
chrono = { version = "0.4", features = ["serde"] }
uuid = { version = "1.4", features = ["v4", "serde"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
colored = "2.0"
