[package]
name = "icn-verifier"
version = "0.1.0"
edition = "2021"
description = "ICN Federation Receipt Verification Service"

[dependencies]
anyhow = "1.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
thiserror = "1.0"
tokio = { version = "1.0", features = ["full"] }
tracing = "0.1"
tracing-subscriber = "0.3"
hyper = { version = "0.14", features = ["full"] }
hyper-tls = "0.5"
axum = "0.6"
chrono = { version = "0.4", features = ["serde"] }
tower = "0.4"
tower-http = { version = "0.4", features = ["trace", "cors"] }
x25519-dalek = "2.0"
rand = "0.8"
base64 = "0.21"
aes-gcm = "0.10"
url = "2.3"

icn-wallet-agent = { path = "../wallet-agent" }
icn-wallet-core = { path = "../wallet-core" }
icn-dag = { path = "../dag" }

[dev-dependencies]
reqwest = { version = "0.11", features = ["json"] }
hyper = { version = "0.14", features = ["full"] }
tower-test = "0.4" 