[package]
name = "icn-wallet-root"
version = "0.1.0"
edition = "2021"
publish = false

# Wallet package dependencies
[dependencies]
anyhow = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
tokio = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
futures = { workspace = true }
thiserror = { workspace = true }
clap = { version = "4.5", features = ["derive"] }
rand = "0.8"
chrono = { version = "0.4", features = ["serde"] }
uuid = { version = "1.3", features = ["v4", "serde"] }
icn-wallet-sync = { path = "./crates/icn-wallet-sync" }
icn-wallet-storage = { path = "./crates/icn-wallet-storage" }
icn-wallet-identity = { path = "./crates/icn-wallet-identity" }
icn-wallet-actions = { path = "./crates/icn-wallet-actions" }
icn-wallet-api = { path = "./crates/icn-wallet-api" }
