[workspace]
members = [
    "crates/identity",
    "crates/storage",
    "crates/sync",
    "crates/actions",
    "crates/api",
    "crates/ffi",
]

[workspace.dependencies]
# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Async runtime
tokio = { version = "1.34", features = ["full"] }
async-trait = "0.1"

# Cryptography
ed25519-dalek = "2.1"
sha2 = "0.10"
base64 = "0.21"
rand = "0.8"

# Error handling
thiserror = "1.0"
anyhow = "1.0"

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# Time management
chrono = { version = "0.4", features = ["serde"] }

# Networking
reqwest = { version = "0.11", features = ["json"] }

# Utilities
uuid = { version = "1.4", features = ["v4", "serde"] }
once_cell = "1.18"

# FFI
uniffi = "0.24"

[profile.release]
lto = true
codegen-units = 1
opt-level = 3
strip = true

[profile.dev.package."*"]
opt-level = 2 