[package]
name = "icn-runtime-root"
version = "0.1.0"
edition = "2021"
publish = false

# Runtime package dependencies
[dependencies]
anyhow = "1.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1", features = ["full"] }
tracing = "0.1"
tracing-subscriber = "0.3"
futures = "0.3"
