[package]
name = "icn-wallet-agent"
version = "0.1.0"
edition = "2021"
description = "ICN Wallet Agent for working with distributed execution receipts"

[dependencies]
anyhow = "1.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
thiserror = "1.0"
clap = { version = "4.0", features = ["derive"] }
tokio = { version = "1.0", features = ["full"] }
tracing = "0.1"
icn-wallet-sync = { path = "../wallet-sync" }
icn-wallet-core = { path = "../wallet-core" }
icn-dag = { path = "../dag" }
chrono = { version = "0.4", features = ["serde"] }
x25519-dalek = "2.0"
rand = "0.8"
base64 = "0.21"
aes-gcm = "0.10"
url = "2.3" 