[package]
name = "icn-wallet-root"
version = "0.1.0"
edition = "2021"
publish = false

# Wallet package dependencies
[dependencies]
anyhow = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
tokio = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
futures = { workspace = true }
