[package]
name = "icn-wallet-root"
version = "0.1.0"
edition = "2021"
publish = false

# Wallet package dependencies
[dependencies]
anyhow = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
tokio = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
futures = { workspace = true }
thiserror = { workspace = true }
clap = { version = "4.5", features = ["derive"] }
rand = "0.8"
icn-wallet-sync = { path = "../crates/wallet-sync" }
wallet-storage = { path = "./crates/storage" }
wallet-identity = { path = "./crates/identity" }
