[package]
name = "icn-wallet-root"
version = "0.1.0"
edition = "2021"
publish = false

# Wallet package dependencies
[dependencies]
anyhow = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
tokio = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
futures = { workspace = true }
thiserror = { workspace = true }
clap = { version = "4.5", features = ["derive"] }
rand = "0.8"
chrono = { version = "0.4", features = ["serde"] }
uuid = { version = "1.3", features = ["v4", "serde"] }
# icn-wallet-sync = { path = "../wallet/crates/sync" } # Temporarily disabled due to exclusion
wallet-storage = { path = "./crates/storage" }
wallet-identity = { path = "./crates/identity" }
wallet-actions = { path = "./crates/actions" }
wallet-api = { path = "./crates/api" }
