[package]
name = "wallet-actions"
version = "0.1.0"
edition = "2021"
description = "Wallet actions module for ICN"

[dependencies]
# Use workspace dependencies
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }

# Internal dependencies
wallet-identity = { path = "../identity" }
wallet-storage = { path = "../storage" } 