[package]
name = "wallet-api"
version = "0.1.0"
edition = "2021"
description = "Wallet API module for ICN"

[dependencies]
# Use workspace dependencies
serde = { workspace = true }
serde_json = { workspace = true }
tokio = { workspace = true }
async-trait = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }

# Web framework
axum = "0.6.19"

# Internal dependencies
wallet-identity = { path = "../identity" }
wallet-storage = { path = "../storage" }
wallet-actions = { path = "../actions" }
wallet-sync = { path = "../sync" } 