[package]
name = "icn-core-vm"
version = "0.1.0"
edition = "2021"
description = "WASM execution engine for the ICN Runtime (CoVM V3)"

[dependencies]
wasmer = { workspace = true }
wasmer-wasi = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }
anyhow = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true } 