[package]
name = "icn-core-vm"
version = "0.1.0"
edition = "2021"
description = "WASM execution engine for the ICN Runtime (CoVM V3)"

[dependencies]
wasmtime = { version = "12.0.1", features = ["async"] }
thiserror = { workspace = true }
tracing = { workspace = true }
anyhow = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
async-trait = { workspace = true }
cid = { workspace = true }
tokio = { version = "1.28", features = ["rt", "macros"] }
futures = "0.3"

# ICN crates
icn-identity = { path = "../identity" }
icn-storage = { path = "../storage" }
icn-economics = { path = "../economics" }
icn-dag = { path = "../dag" }

[dev-dependencies]
tokio = { version = "1.28", features = ["rt", "macros", "rt-multi-thread"] } 