[package]
name = "icn-core-vm"
version = "0.1.0"
edition = "2021"
description = "WASM execution engine for the ICN Runtime (CoVM V3)"

[dependencies]
wasmtime = { version = "18.0.1", features = ["async"] }
thiserror = "1.0"
tracing = { version = "0.1", features = ["log"] }
anyhow = "1.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
async-trait = { workspace = true }
cid = "0.10"
tokio = { version = "1.28", features = ["rt", "macros"] }
futures = "0.3"
chrono = "0.4"
wat = "1.0"
log = "0.4"
uuid = { version = "1.3", features = ["v4", "serde"] }

# ICN crates
icn-identity = { path = "../identity" }
icn-storage = { path = "../storage" }
icn-economics = { path = "../economics" }
icn-dag = { path = "../dag" }

[dev-dependencies]
tokio = { version = "1.28", features = ["rt", "macros", "rt-multi-thread"] } 