[package]
name = "icn-economics"
version = "0.1.0"
edition = "2021"
description = "Scoped tokens, Metering logic, Treasury ops, and Budgeting primitives for the ICN Runtime"

[dependencies]
icn-identity = { path = "../identity" }
icn-dag = { path = "../dag" }
thiserror = "1.0"
anyhow = { workspace = true }
tracing = { workspace = true }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
uuid = { version = "1.3", features = ["v4", "serde"] }
chrono = "0.4"
icn-storage = { path = "../storage" }
async-trait = "0.1" 