[package]
name = "icn-federation"
version = "0.1.0"
edition = "2021"
description = "Federation sync, Quorum, Guardian Mandates, and Blob replication policies for the ICN Runtime"

[dependencies]
icn-identity = { path = "../identity" }
icn-dag = { path = "../dag" }
icn-storage = { path = "../storage" }
libp2p = { workspace = true }
thiserror = { workspace = true }
anyhow = { workspace = true }
tracing = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true } 