[package]
name = "icn-federation"
version = "0.1.0"
edition = "2021"
description = "Federation sync, Quorum, Guardian Mandates, and Blob replication policies for the ICN Runtime"

[dependencies]
icn-identity = { path = "../identity" }
icn-dag = { path = "../dag" }
icn-storage = { path = "../storage" }

# LibP2P dependencies
libp2p = { version = "0.53", features = ["tokio", "tcp", "noise", "yamux", "gossipsub", "mdns", "kad", "request-response", "macros", "identify", "serde", "json"] }
tokio = { version = "1.35", features = ["sync", "rt-multi-thread", "time", "macros", "io-util"] }
futures = { version = "0.3", features = ["thread-pool"] }

# Content addressing
cid = { workspace = true }
multihash = { workspace = true, features = ["sha2"] }

# Hashing
sha2 = "0.10"

# Randomization
rand = "0.8"

# Serialization/error handling
thiserror = { workspace = true }
anyhow = { workspace = true }
tracing = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
async-trait = { workspace = true } 