[package]
name = "wallet-ffi"
version = "0.1.0"
edition = "2021"
description = "Wallet FFI module for ICN"

[dependencies]
# Use workspace dependencies
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }
uniffi = { workspace = true }

# Internal dependencies
wallet-identity = { path = "../identity" }
wallet-storage = { path = "../storage" }
wallet-actions = { path = "../actions" }
wallet-sync = { path = "../sync" } 