[package]
name = "icn-governance-kernel"
version = "0.1.0"
edition = "2021"
description = "CCL interpretation and Core Law Modules for the ICN Runtime"

[dependencies]
tokio = { version = "1.25", features = ["full"] }
cid = { workspace = true }
multihash = { workspace = true }
async-trait = "0.1.68"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
thiserror = "1.0"
chrono = "0.4.23"
uuid = { version = "1.3", features = ["v4", "serde"] }
tracing = "0.1.37"
regex = "1.7.1"
syn = { version = "1.0", features = ["full", "parsing"] }
quote = "1.0"
proc-macro2 = "1.0"
pest = "2.7"
pest_derive = "2.7"
anyhow = "1.0"
sha2 = "0.10.6"
icn-core-vm = { path = "../core-vm" }
icn-identity = { path = "../identity" }
icn-storage = { path = "../storage" }
icn-economics = { path = "../economics" } 