[package]
name = "wallet-identity"
version = "0.1.0"
edition = "2021"
description = "Wallet identity module for ICN"

[dependencies]
# Use workspace dependencies
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }
ed25519-dalek = { workspace = true }
rand = { workspace = true }
base64 = { workspace = true }

# Internal dependencies
wallet-storage = { path = "../storage", optional = true }

[features]
default = ["storage"]
storage = ["wallet-storage"] 