[package]
name = "icn-storage"
version = "0.1.0"
edition = "2021"
description = "Abstract storage backend trait and Distributed Blob Storage primitives for the ICN Runtime"

[dependencies]
icn-identity = { path = "../identity" }
multihash = { version = "0.16.3", features = ["sha2"] }
cid = { workspace = true }
hashbrown = { workspace = true }
thiserror = { workspace = true }
anyhow = { workspace = true }
tracing = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
async-trait = { workspace = true }
futures = { workspace = true }

[dev-dependencies]
tokio = { version = "1.0", features = ["full"] } 