[package]
name = "icn-storage"
version = "0.1.0"
edition = "2021"
description = "Abstract storage backend trait and Distributed Blob Storage primitives for the ICN Runtime"

[dependencies]
icn-identity = { path = "../identity" }
multihash = { workspace = true }
cid = { workspace = true }
hashbrown = { workspace = true }
thiserror = { workspace = true }
anyhow = { workspace = true }
tracing = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
async-trait = { workspace = true }
futures = { workspace = true }
tokio = { version = "1.0", features = ["sync", "rt-multi-thread", "macros"] }
sha2 = "0.10.9"

[dev-dependencies] 
