[package]
name = "wallet-storage"
version = "0.1.0"
edition = "2021"
description = "Wallet storage module for ICN"

[dependencies]
# Use workspace dependencies
serde = { workspace = true }
serde_json = { workspace = true }
tokio = { workspace = true }
async-trait = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }
uuid = { workspace = true } 