[package]
name = "wallet-agent"
version = "0.1.0"
edition = "2024"

[dependencies]
wallet-core = { path = "../wallet-core" }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1.0", features = ["full"] }
uuid = { version = "1.0", features = ["v4", "serde"] }
thiserror = "1.0"
chrono = "0.4"
base64 = "0.21"
