[package]
name = "wallet-agent"
version = "0.1.0"
edition = "2021"

[dependencies]
wallet-core = { path = "../wallet-core" }
wallet-sync = { path = "../wallet-sync" }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1.34", features = ["full"] }
chrono = { version = "0.4", features = ["serde"] }
uuid = { version = "1.4", features = ["v4", "serde"] }
async-trait = "0.1"
base64 = "0.21.0"
thiserror = "1.0"
tracing = "0.1"
