[package]
name = "wallet-core"
version = "0.1.0"
edition = "2021"

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1.0", features = ["full"] }
ed25519-dalek = { version = "2.0", features = ["rand_core"] }
uuid = { version = "1.0", features = ["v4", "serde"] }
base64 = "0.21"
thiserror = "1.0"
rand = "0.8"
chrono = "0.4"
