[package]
name = "wallet-core"
version = "0.1.0"
edition = "2021"

[dependencies]
ed25519-dalek = "2.0.0"
base64 = "0.21.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
chrono = { version = "0.4", features = ["serde"] }
rand = "0.8"
sha2 = "0.10"
multihash = "0.18"
cid = "0.10"
async-trait = "0.1"
tokio = { version = "1.34", features = ["full"] }
uuid = { version = "1.4", features = ["v4", "serde"] }
