[package]
name = "wallet-sync"
version = "0.1.0"
edition = "2021"

[dependencies]
wallet-core = { path = "../wallet-core" }
wallet-agent = { path = "../wallet-agent" }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1.34", features = ["full"] }
uuid = { version = "1.0", features = ["v4", "serde"] }
thiserror = "1.0"
base64 = "0.21"
chrono = { version = "0.4", features = ["serde"] }
reqwest = { version = "0.11", features = ["json"] }
sha2 = "0.10"
multihash = "0.18"
cid = "0.10"
futures = "0.3"
libp2p = { version = "0.52", features = ["tcp", "dns", "websocket", "noise", "yamux", "ping", "identify"] }
tracing = "0.1"
async-trait = "0.1"
