[dependencies]
anyhow = "1.0"
serde = { version = "1.0", features = ["derive"] }
tracing = "0.1"
icn-dag = { path = "../dag" }
icn-identity = { path = "../identity" }
icn-storage = { path = "../storage" }
icn-core-vm = { path = "../core-vm" }
async-trait = "0.1"
chrono = { version = "0.4", features = ["serde"] }
reqwest = { version = "0.11", features = ["json"] }
thiserror = "1.0"
tokio = { version = "1.0", features = ["rt-multi-thread", "macros", "time"] }
serde_json = "1.0" 