[package]
name = "wallet-ui-api"
version = "0.1.0"
edition = "2021"

[dependencies]
wallet-core = { path = "../wallet-core" }
wallet-agent = { path = "../wallet-agent" }
wallet-sync = { path = "../wallet-sync" }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1.34", features = ["full"] }
axum = "0.7"
tower = "0.4"
tower-http = { version = "0.5", features = ["cors"] }
thiserror = "1.0"
chrono = { version = "0.4", features = ["serde"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
uuid = { version = "1.4", features = ["v4", "serde"] }
async-trait = "0.1"
