[package]
name = "icn-covm"
version = "0.1.0"
edition = "2021"
description = "Command-line interface for the ICN Runtime (CoVM V3)"

[lib]
path = "lib.rs"

[dependencies]
clap = { workspace = true }
anyhow = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
tokio = { version = "1.28", features = ["full"] }
cid = { workspace = true }
futures = { workspace = true }
uuid = { version = "1.4", features = ["v4", "serde"] }
serde_json = { workspace = true }
chrono = { version = "0.4", features = ["serde"] }
base64 = { version = "0.21", features = ["std"] }
rand = "0.8"
bs58 = "0.5"
wasmer-wasi = "3.1.0"
multihash = { workspace = true }
serde = { workspace = true }
libipld = { workspace = true }
serde_ipld_dagcbor = { workspace = true }
ed25519-dalek = { version = "1.0", features = ["std", "serde"] }
ssi = { workspace = true, features = ["ed25519", "rsa"] }
tempfile = "3.8"

# ICN crates
icn-core-vm = { path = "../crates/core-vm" }
icn-governance-kernel = { path = "../crates/governance-kernel" }
icn-identity = { path = "../crates/identity", features = ["jwk", "signing"] }
icn-storage = { path = "../crates/storage", default-features = false, features = ["memory-storage"] }
icn-economics = { path = "../crates/economics" }
icn-execution-tools = { path = "../crates/execution-tools" }
icn-ccl-compiler = { path = "../crates/ccl-compiler" }
icn-federation = { path = "../crates/federation" }
icn-dag = { path = "../crates/dag" }

# Wallet components
icn-wallet-types = { path = "../../wallet/crates/icn-wallet-types" }

[[bin]]
name = "covm"
path = "covm.rs"

[dev-dependencies]
# For testing
tempfile = "3.8"
assert_fs = "1.0"
predicates = "2.1"
icn-ccl-compiler = { path = "../crates/ccl-compiler" }

[[test]]
name = "entity_creation_test"
path = "tests/entity_creation_test.rs"

[[test]]
name = "ccl_entity_creation_test"
path = "tests/ccl_entity_creation_test.rs" 